add_subdirectory(servo)
add_subdirectory(led)
add_subdirectory(keyboard)
add_subdirectory(striing)
add_subdirectory(console)
add_subdirectory(timer_it)
add_subdirectory(timer)
add_subdirectory(uart)

target_link_libraries(${PROJECT_NAME}.elf led)
target_link_libraries(${PROJECT_NAME}.elf servo)
target_link_libraries(${PROJECT_NAME}.elf keyboard)
target_link_libraries(${PROJECT_NAME}.elf striing)
target_link_libraries(${PROJECT_NAME}.elf console)
target_link_libraries(${PROJECT_NAME}.elf timer_it)
target_link_libraries(${PROJECT_NAME}.elf timer)
target_link_libraries(${PROJECT_NAME}.elf uart)